--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,9 @@
     "com.unity.purchasing": "2.0.6",
     "com.unity.textmeshpro": "2.0.0",
     "com.unity.timeline": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "1.0.0",
+    "com.unity.xr.oculus.standalone": "1.29.0",
+    "com.unity.xr.openvr.standalone": "1.0.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
